--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GithubUserRepoApp</string>
+
+    <string name="network_not_reachable">"네트워크가 가용하지 않습니다. 네트워크 상태를 확인해주세요"</string>
+
 </resources>
